@@ -4,6 +4,7 @@
 	* (mhatle) rearrange the pseudo_op file data operations to reduce
 		   the number of selects.
 	* (mhatle) add the ability to cache the last select result
+	* (mhatle) change the indexing in pseudo_db.c
 
 2010-12-14:
 	* (mhatle) restructure wrapfuncs.c
